<resources>
    <string name="app_name">Home Workout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="training">Training</string>
    <string name="discover">Discover</string>
    <string name="report">Report</string>
    <string name="settings">Settings</string>
    <string name="home_workout">HOME WORKOUT</string>
    <string name="workouts">WORKOUTS</string>
    <string name="kcal">KCALS</string>
    <string name="edit">EDIT</string>
    <string name="picks">Picks for you</string>
    <string name="tabata">4 MIN Tabata</string>
    <string name="tabata_info">The most effective workout for fat burning.</string>
    <string name="feet">Feet :</string>
    <string name="inch">In :</string>
    <string name="cancel">Cancel</string>
    <string name="save">SAVE</string>
    <string name="weight_in_kg">SAVE</string>
    <string name="height_in_cm">SAVE</string>
    <string name="weight_in_pounds">SAVE</string>
    <string name="minutes">MINUTES</string>
    <string name="beginner">BEGINNER</string>
    <string name="intermediate">INTERMEDIATE</string>
    <string name="advanced">ADVANCED</string>
    <string name="star">star</string>
    <string name="kg">KG</string>
    <string name="lbs">LB</string>
    <string name="cm">CM</string>
    <string name="in">IN</string>
    <string name="weight">Weight :</string>
    <string name="height">Height :</string>
    <string name="bmiResult">BMI(kg/m*2) :</string>
    <string name="restart">RESTART THE EXERCISE</string>
    <string name="quit">Quit</string>
    <string name="take_a_look">Just take a look</string>
    <string name="hard">Too hard</string>
    <string name="dont_know">Dont know how to do it</string>
    <string name="resume">RESUME</string>
    <string name="start">START</string>
    <string name="rest">REST</string>
    <string name="mins">+20s</string>
    <string name="pause">PAUSE</string>
    <string name="previous">previous</string>
    <string name="skip">skip</string>
    <string name="next">NEXT</string>
    <string name="animation">ANIMATION</string>
    <string name="exercise">EXERCISES</string>
    <string name="calories">CALORIES</string>
    <string name="time">TIME</string>
    <string name="history">History</string>
    <string name="yourHistory">Your Workout History</string>
    <string name="image">image</string>
    <string name="bmi">CALCULATE YOUR BMI</string>
    <string name="congrats">Congratulations!! </string>
    <string name="finish"> You finished exercise!!</string>

    <string name="ready">READY TO GO!!</string>
    <string name="workout_type">Workout_type</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="this_will_stop_the_workout_are_you_sure_you_want_to_exit">This will stop the workout. Are you sure you want to exit?</string>
    <string name="hiit_killer_core">HIIT killer core</string>
    <string name="hiit_killer_core_tv">HIIT killer core</string>
    <string name="_55kg">55kg</string>
    <string name="date">date</string>
    <string name="_23_apr">23/Apr-</string>
    <string name="hiit_killer_core_val">HIIT killer core</string>
</resources>