<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@drawable/back_ground_next_exercise_rest_view"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_baseline_arrow_back"
        android:contentDescription="@string/image"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="27sp"
        app:layout_constraintVertical_bias=".3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <Button
        android:id="@+id/take_a_look_btn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/take_a_look"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:background="@drawable/background_round"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_quit"/>

    <Button
        android:id="@+id/too_hard"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/hard"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/background_round"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/take_a_look_btn"/>

    <Button
        android:id="@+id/dont_know"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/dont_know"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:background="@drawable/background_round"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/too_hard"/>

    <Button
        android:id="@+id/btn_quit_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:background="#00000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias=".9"
        app:layout_constraintTop_toBottomOf="@id/dont_know"
     />

    <ImageButton
        android:id="@+id/iv_quit"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
        android:contentDescription="@string/image"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toEndOf="@id/btn_quit_two"
        app:layout_constraintTop_toBottomOf="@id/dont_know"/>
</androidx.constraintlayout.widget.ConstraintLayout>