<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_round"
    xmlns:app="http://schemas.android.com/apk/res-auto">


   <TextView
       android:id="@+id/tv_title_exercise"
       android:layout_width="match_parent"
       android:layout_height="70dp"
       android:text="@string/animation"
       android:textSize="25sp"
       android:textStyle="bold"
       android:gravity="center"
       android:textColor="@color/white"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_exercise"/>

    <ImageView
        android:id="@+id/iv_image_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintVertical_bias="0"
        android:src="@drawable/ic_launcher_background"
        android:contentDescription="@string/image"
        app:layout_constraintHeight_percent=".45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tv_exercise_name_bottom_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_image_bottom_sheet"/>




</androidx.constraintlayout.widget.ConstraintLayout>