<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/cl_layout"
    android:layout_height="135dp"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="7dp"
    android:layout_marginBottom="7dp"
    >

  <ImageView
      android:id="@+id/iv_exercise"
      android:layout_width="0dp"
      android:layout_height="0dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
      android:background="@drawable/background_round_exercise"
    android:src="@drawable/man"
      android:scaleType="centerCrop"
    android:contentDescription="@string/image"/>


  <TextView
      android:id="@+id/tv_item_beginer"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:layout_marginStart="15dp"
      android:text="@string/beginner"
      android:textSize="18sp"
      android:textStyle="bold"
      android:textColor="@color/white"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>

  <ImageView
    android:id="@+id/star_imageOne"
      android:layout_width="23dp"
      android:layout_height="23dp"
    android:src="@drawable/ic_baseline_star_border_24"
    android:contentDescription="@string/star"
      android:layout_marginTop="20dp"
      android:layout_marginStart="7dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_item_beginer"/>


  <ImageView
      android:id="@+id/star_imageTwo"
      android:layout_width="23dp"
      android:layout_height="23dp"
      android:src="@drawable/ic_baseline_star_border_24"
      android:contentDescription="@string/star"
      android:layout_marginTop="20dp"
      android:layout_marginStart="2dp"
      app:layout_constraintStart_toEndOf="@id/star_imageOne"
      app:layout_constraintTop_toBottomOf="@id/tv_item_beginer"/>

  <ImageView
      android:id="@+id/star_imageThree"
      android:layout_width="23dp"
      android:layout_height="23dp"
      android:src="@drawable/ic_baseline_star_border_24"
      android:contentDescription="@string/star"
      android:layout_marginTop="20dp"
      android:layout_marginStart="2dp"
      app:layout_constraintStart_toEndOf="@id/star_imageTwo"
      app:layout_constraintTop_toBottomOf="@id/tv_item_beginer"/>
</androidx.constraintlayout.widget.ConstraintLayout>