<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ReportFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarExercise"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:theme="@style/ToolbarTheme"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        android:background="@color/white"
        app:titleTextColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".9"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarExercise">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">




    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_view_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="22dp"
        android:layout_margin="15dp"
        android:background="@drawable/background_round_finish"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/exercise_count_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/workouts"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <TextView
            android:id="@+id/calories_count_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/kcal"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias=".55"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <TextView
            android:id="@+id/time_count_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/minutes"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <TextView
            android:id="@+id/exercise_count"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="5"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintHorizontal_bias=".2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/exercise_count_label"/>


        <TextView
            android:id="@+id/calorie_count"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="76"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".55"
            app:layout_constraintTop_toBottomOf="@id/calories_count_label"/>


        <TextView
            android:id="@+id/time_count"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="00.90"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".9"
            app:layout_constraintTop_toBottomOf="@id/time_count_label"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

<TextView
    android:id="@+id/tv_history_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/history"
    android:textSize="22sp"
    android:textStyle="bold"
    android:layout_marginStart="15dp"
    android:textColor="@color/black"
    android:layout_marginTop="15dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/cl_view_one"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:background="@drawable/background_round_finish"
        app:layout_constraintHeight_percent=".15"
        app:layout_constraintWidth_percent=".95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_history_title">

        <com.prolificinteractive.materialcalendarview.MaterialCalendarView
            android:id="@+id/prolific_calendar_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_bmi_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmiResult"
        android:textSize="19sp"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl"/>

    <TextView
        android:id="@+id/tv_bmi_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="25.2"
        android:textSize="19sp"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/tv_bmi_title"
        app:layout_constraintTop_toTopOf="@id/tv_bmi_title"/>

        <Button
            android:id="@+id/btn_bmi_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textSize="15sp"
            android:textStyle="normal"
            android:layout_marginStart="5dp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".95"
            app:layout_constraintTop_toTopOf="@id/tv_bmi_title"/>

    <ImageView
        android:id="@+id/bmi_circle"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_baseline_square_24"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/image"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_bmi_title"/>



    <TextView
        android:id="@+id/bmi_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BMI Description"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/bmi_circle"
        app:layout_constraintTop_toBottomOf="@id/tv_bmi_title"/>


    <com.github.mikephil.charting.charts.PieChart
    android:id="@+id/bmi_pie_chart"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintHeight_percent=".27"
    android:layout_marginTop="5dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/bmi_description"/>



    <TextView
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bmi_pie_chart"/>

    <Button
        android:id="@+id/lbs_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="lbs"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginStart="2dp"
        android:layout_marginTop="14dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weight"/>

    <Button
        android:id="@+id/weight_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add"
        android:textSize="15sp"
        android:textStyle="normal"
        android:layout_marginStart="5dp"
        android:textColor="@color/white"
        android:layout_marginTop="-10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".95"
        app:layout_constraintTop_toTopOf="@id/weight"/>



    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/line_chart"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/lbs_title"
        app:layout_constraintStart_toStartOf="parent"/>





</androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>


